force-app/main/default/objects/SurveyTemplateItem__c/fields/IsSystem__c.field-meta.xml
<CustomField>
    <fullName>IsSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is System</label>
    <type>Checkbox</type>
</CustomField>