force-app/main/default/objects/SurveyTemplateItem__c/fields/QuestionId__c.field-meta.xml
<CustomField>
    <fullName>QuestionId__c</fullName>
    <label>Question Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>