force-app/main/default/objects/SurveyTemplateItem__c/fields/QuestionProvider__c.field-meta.xml
<CustomField>
    <fullName>QuestionProvider__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SurveyConfiguration__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Survey_Question_Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SurveyConfiguration__c</referenceTo>
    <relationshipLabel>Survey Template Items</relationshipLabel>
    <relationshipName>SurveyTemplateItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>