force-app/main/default/objects/SurveyTemplateItem__c/fields/UniqueOrder__c.field-meta.xml
<CustomField>
    <fullName>UniqueOrder__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Order</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>